<resources>
    <string name="app_name">My Application</string>
    <string name="New_Quest">Add new quest</string>
    <string name="Write_Quest">Enter New Quest</string>
    <string name="options">Options</string>
    <string name="textview">TextView</string>
    <string name="finish_quest">Finish Quest</string>
    <string name="delete_quest">Delete Quest</string>
    <string name="end_quest">Finish quest</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="rewards">Rewards</string>
    <string name="kamar">Kamar</string>
    <string name="help">Help</string>
    <string name="quest_page">Quest page</string>
    <string name="title_activity_reward_page">rewardPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_reward">Enter your reward</string>
    <string name="reward_button">Enter reward</string>
    <string name="menu">Menu</string>
    <string name="gold">Gold:</string>
    <string name="steps">Step 1) Find a task you need to do and add it to the quests section.
        \n \n Step 2) Think of a way(s) of rewarding yourself and add them to the rewards section.
        \n \n Step 3) Once you\'ve finished one of the Quests you will get a certain amount of gold for completing your work.

        \n \n Congratulations!
         \n You can now spend this \'gold\' on buying rewards for yourself from the rewards section!

    </string>
    <string name="help_title">How to play the game:</string>
    <string name="buy_reward">Buy Reward</string>

</resources>