<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <Button
        android:id="@+id/questPage_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="112dp"
        android:text="@string/quest_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rewardPage_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:text="@string/rewards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questPage_btn" />

    <Button
        android:id="@+id/kamar_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/kamar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rewardPage_btn" />

    <Button
        android:id="@+id/helpPage_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kamar_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>